details z-index fix-basket close icon fix

--- a/src/styles/Basket.scss
+++ b/src/styles/Basket.scss
@@ -224,6 +224,7 @@
   .basket-close {
     font-size: 2.5rem;
     padding: 0.5rem;
+    margin-left: 0.3rem;
   }
 }
 @media all and (min-width: 610px) and (max-width: 767px) {
@@ -259,6 +260,7 @@
   .basket-close {
     font-size: 2rem;
     padding: 0.4rem;
+    margin-left: 0.3rem;
   }
 }
 @media all and (min-width: 480px) and (max-width: 609px) {
@@ -294,6 +296,7 @@
   .basket-close {
     font-size: 1.8rem;
     padding: 0.4rem;
+    margin-left: 0.3rem;
   }
   .basket-container {
     & h1 {
@@ -348,6 +351,7 @@
   .basket-close {
     font-size: 1.8rem;
     padding: 0.4rem;
+    margin-left: 0.3rem;
   }
   .basket-container {
     & h1 {
@@ -403,6 +407,7 @@
   .basket-close {
     font-size: 1.8rem;
     padding: 0.4rem;
+    margin-left: 0.3rem;
   }
   .basket-container {
     padding: $pd-normal;
@@ -457,6 +462,7 @@
   .basket-close {
     font-size: 1.8rem;
     padding: 0.4rem;
+    margin-left: 0.3rem;
   }
   .basket-container {
     & h1 {
