--- a/src/styles/ProductDetails.scss
+++ b/src/styles/ProductDetails.scss
@@ -33,7 +33,7 @@
         box-shadow: 2px 2px 2px 1px $grey;
         border-radius: 50%;
         cursor: pointer;
-        z-index: 50;
+        z-index: 2;
         transform: translateY(0px);
         transition: all 0.5s ease-in-out;
         &:hover {
